# STUNTrace

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: hiut_lib.h  sockethelper.h  utils.h
src/: CMakeLists.txt  ip_query.c  iphelper.c  nptrace.c  sockethelper.c  stunserver.c  stuntrace.c  utils.c
